Adapt to P2 enhancements in Eclipse 2023-12
And add tests for support of Product Update-site names from the
tycho-4.0.x branch.